--- a/heystack-nrf5x/Makefile.common
+++ b/heystack-nrf5x/Makefile.common
@@ -48,6 +48,15 @@ ifneq ($(ADVERTISING_INTERVAL), 0)
 	ASMFLAGS += -DADVERTISING_INTERVAL=$(ADVERTISING_INTERVAL)
 endif
 
+DYNAMIC_KEYS ?= 0
+ifeq ($(DYNAMIC_KEYS), 1)
+	CFLAGS += -DDYNAMIC_KEYS=1
+	ASMFLAGS += -DDYNAMIC_KEYS=1
+else
+	CFLAGS += -DDYNAMIC_KEYS=0
+	ASMFLAGS += -DDYNAMIC_KEYS=0
+endif
+
 ifeq ($(BOARD), )
 	override BOARD = custom_board
 endif
@@ -164,6 +173,10 @@ bmpflash-$(1)-patched: patched_$(1)
 help-msg::
 	@echo stflash-$(1)-patched - flash $(1) with softdevice for $(1)
 	@echo bmpflash-$(1)-patched - flash $(1) with softdevice for $(1) using Black Magic Probe
+
+stflash-$(1): bin_$(1)
+	@echo flashing application and softdevice...
+	openocd -f openocd.cfg -c "init; halt; nrf51 mass_erase; program $(OUTPUT_DIRECTORY)/$(1)_$(SOFTDEVICE_MODEL).bin verify; reset; exit";
 endef
 
 $(foreach target, $(TARGETS), $(eval $(call flash_targets,$(target))))
