--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,17 @@ nrf-sdk/
 
 .agent/
 private/
+
+# Python / PyInstaller
+build/
+dist/
+*.spec
+__pycache__/
+venv/
+env/
+.env
+
+# Temp files
+temp/
+temp_*
+*.tmp
