整理文档和隔离用户

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ nrf-sdk/
 .agent/
 private/
 
+# User session data (generated firmware bundles)
+user_sessions/
+
 # Python / PyInstaller
 build/
 dist/
