优化完成！现在更智能了：
不再强制跳转：如果你同时插了 J-Link 和 DAPLink，你可以手动选择其中任意一个，系统不会再强制把你切回去了。
状态更清晰：
正在使用的显示：(✅ 使用中)
已连接但未选的显示：(⚪️ 可用)

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ config/*
 
 # Firmware dumps
 firmware/
+firmware_output/
+*_keys.json
 
 # SDK (Excluded to reduce repo size. Users should use setup_sdk.sh)
 nrf-sdk/
